--- a/index.html
+++ b/index.html
@@ -5,11 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>uHost</title>
     <link rel="shortcut icon" href="favicon.png" />
+    <style>
+      section {
+        background-color: #ff1b68;
+      }
+    </style>
   </head>
-
   <body>
     <main>
-      <section style="background-color: #ff1b68">
+      <section>
         <h1>Get the freedom you deserve.</h1>
       </section>
     </main>
