Add .DS_Store file to packages directory

--- a/packages/index.html
+++ b/packages/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="packages.css" />
   </head>
   <body>
+    <div class="background"></div>
     <header class="main-header">
       <div>
         <a href="../index.html" class="main-header__brand"> uHost </a>
@@ -37,6 +38,7 @@
       <section class="package" id="plus">
         <a href="#">
           <h1 class="package__title">Our PLUS Plan</h1>
+          <h2 class="package__badge">Recommended</h2>
           <h2 class="package__subtitle">
             The most popular choice of our customers.
           </h2>
