--- a/customers/index.html
+++ b/customers/index.html
@@ -16,10 +16,7 @@
     />
     <title>uHost Customers</title>
     <link rel="shortcut icon" href="../favicon.png" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Anton|Montserrat:400,700"
-      rel="stylesheet"
-    />
+
     <link rel="stylesheet" href="../shared.css" />
     <link rel="stylesheet" href="customers.css" />
   </head>
@@ -49,7 +46,7 @@
             <a href="../customers/index.html">Customers</a>
           </li>
           <li class="main-nav__item main-nav__item--cta">
-            <a href="..start-hosting/index.html">Start Hosting</a>
+            <a href="../start-hosting/index.html">Start Hosting</a>
           </li>
         </ul>
       </nav>
