--- a/packages/index.html
+++ b/packages/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta
       name="viewport"
       content="
     width=device-width, 
@@ -12,15 +13,10 @@
     minimum-scale=1.0,
     user-scalable=yes
     "
-    />
+    /> -->
     <title>uHost</title>
     <link rel="shortcut icon" href="favicon.png" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
-      rel="stylesheet"
-    />
+
     <link rel="stylesheet" href="../shared.css" />
     <link rel="stylesheet" href="packages.css" />
   </head>
